--- a/index.html
+++ b/index.html
@@ -19,7 +19,23 @@
     <div>
       <a href="./Project3/index.html"
       >Exercise 3 -Tic Tac Toe </a>
-  </div>
+    </div>
+    <div>
+      <a href="./Project4/index.html"
+      >Exercise 4 -Canvas</a>
+    </div>
+    <div>
+      <a href="./Project5/index.html"
+      >Exercise 5 SVG Figures</a>
+    </div>
+    <div>
+      <a href="./Project6/index.html"
+      >Exercise 6 - Simple Panel</a>
+    </div>
+    <div>
+      <a href="./Project7/index.html"
+      >Exercise 7 - Figures Panel</a>
+    </div>
 
   </body>
 </html>
