--- a/Project7/index.html
+++ b/Project7/index.html
@@ -10,10 +10,13 @@
     <script type="text/javascript" src="https://cdn.bokeh.org/bokeh/release/bokeh-widgets-3.3.3.min.js"></script>
     <script type="text/javascript" src="https://cdn.bokeh.org/bokeh/release/bokeh-tables-3.3.3.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@holoviz/panel@1.3.8/dist/panel.min.js"></script>
+    <link rel="stylesheet" href="assets/styles.css">
 </head>
-<body>
+<body background-color: #f0f0f0>
     <div id="main"></div>
-    <py-config src="./pyscript.toml"></py-config>
-    <py-script src="./main.py"></py-script>
+    <div class="board">
+        <py-config src="./pyscript.toml"></py-config>
+        <py-script src="./main.py"></py-script>
+    </div>
 </body>
 </html>
